test/consumingLhs7.slq

def main(){
	x:=H(0:ğ”¹);
	dup(measure(x)):= /// error
		H(x); /// TODO
}
